--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/express": "4.17.13",
     "cors": "2.8.5",
+    "dotenv": "^14.3.2",
     "express": "4.17.2",
     "express-session": "1.17.2",
     "session-file-store": "^1.5.0"
